src/v7/CAPI_Lines.pas


end;
//------------------------------------------------------------------------------
function Lines_Get_NormAmps(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).NormAmps;
        end
end;
//------------------------------------------------------------------------------
procedure Lines_Set_EmergAmps(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                EmergAmps := Value;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_NormAmps(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                NormAmps := Value;
            end;
        end;
end;
//------------------------------------------------------------------------------
function Lines_Get_Geometry_AnsiString(): Ansistring; inline;
begin
    Result := '';
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).GeometryCode;
        end
end;

function Lines_Get_Geometry(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Geometry_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Geometry(const Value: PAnsiChar); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Parser.CmdString := 'geometry=' + Value;
                Edit;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
function Lines_Get_Rg(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).Rg;
        end
end;
//------------------------------------------------------------------------------
function Lines_Get_Rho(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).rho;
        end
end;
//------------------------------------------------------------------------------
function Lines_Get_Xg(): Double; CDECL;
begin
    Result := 0.0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).Xg;
        end
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rg(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Parser.CmdString := Format('rg=%.7g', [Value]);
                Edit;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rho(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Parser.CmdString := Format('rho=%.7g', [Value]);
                Edit;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xg(Value: Double); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Parser.CmdString := Format('xg=%.7g', [Value]);
                Edit;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
procedure Lines_Get_Yprim(var ResultPtr: PDouble; ResultCount: PInteger); CDECL;
{ Return the YPrim matrix for this element }

var
    Result: PDoubleArray;
    iV: Integer;
    i: Integer;
    NValues: Integer;
    cValues: pComplexArray;

begin
    if ActiveCircuit = NIL then
    begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    end
    else
        with ActiveCircuit do
            if IsLine(ActiveCircuit.ActiveCktElement) then
                with TLineObj(ActiveCircuit.ActiveCktElement) do
                begin
                    NValues := SQR(Yorder);
                    cValues := GetYprimValues(ALL_YPRIM);  // Get pointer to complex array of values
                    if cValues = NIL then
                    begin   // check for unassigned array
                        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array
                        Exit;  // Get outta here
                    end;
                    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (2 * NValues - 1) + 1);  // Make variant array
                    iV := 0;

                    for i := 1 to NValues do
                    begin    // Plunk the values in the variant array
                        Result[iV] := cValues^[i].re;
                        Inc(iV);
                        Result[iV] := cValues^[i].im;
                        Inc(iV);
                    end;
                end
            else
                Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);  // just return null array

end;

procedure Lines_Get_Yprim_GR(); CDECL;
// Same as Lines_Get_Yprim but uses global result (GR) pointers
begin
    Lines_Get_Yprim(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
procedure Lines_Set_Yprim(ValuePtr: PDouble; ValueCount: Integer); CDECL;
var
    Value: PDoubleArray;

begin
    Value := PDoubleArray(ValuePtr);
    if ActiveCircuit <> NIL then
    begin
       {Do Nothing for now}
    end;
end;
//------------------------------------------------------------------------------
function Lines_Get_NumCust(): Integer; CDECL;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).BranchNumCustomers;
        end
end;
//------------------------------------------------------------------------------
function Lines_Get_TotalCust(): Integer; CDECL;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).BranchTotalCustomers;
        end
end;
//------------------------------------------------------------------------------
function Lines_Get_Parent(): Integer; CDECL;
{ Sets the Active Line to the immediately upline Line obj, if any}
{ Returns line index  or 0 if it fails or no more lines}

var
    pLine: TLineObj;

begin

    Result := 0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            pLine := TLineObj(ActiveCircuit.ActiveCktElement);
            if pLine.ParentPDelement <> NIL then
            begin
                if (pLine.ParentPDelement.Enabled) and (IsLine(pLine.ParentPDelement)) then
                begin
                    ActiveCircuit.ActiveCktElement := pLine.ParentPDElement;
                    Result := ActiveCircuit.Lines.ActiveIndex;
                end;
            end;
        end;

end;
//------------------------------------------------------------------------------
function Lines_Get_Count(): Integer; CDECL;
begin
    if Assigned(Activecircuit) then
        Result := ActiveCircuit.Lines.ListSize;
end;
//------------------------------------------------------------------------------
function Lines_Get_Spacing_AnsiString(): Ansistring; inline;
begin
    Result := '';
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).SpacingCode;
        end
end;

function Lines_Get_Spacing(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Lines_Get_Spacing_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Spacing(const Value: PAnsiChar); CDECL;
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                Parser.CmdString := 'spacing=' + Value;
                Edit;
                YprimInvalid := TRUE;
            end;
        end;
end;
//------------------------------------------------------------------------------
function Lines_Get_Units(): Integer; CDECL;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            Result := TLineObj(ActiveCircuit.ActiveCktElement).LengthUnits;
        end

end;
//------------------------------------------------------------------------------
procedure Lines_Set_Units(Value: Integer); CDECL;
{
 This code assumes the present value of line units is NONE.
 The Set functions in this interface all set values in this length unit.
}
begin
    if ActiveCircuit <> NIL then
        if IsLine(ActiveCircuit.ActiveCktElement) then
        begin
            with TLineObj(ActiveCircuit.ActiveCktElement) do
            begin
                if Value < dssLineUnitsMaxnum then
                begin
                    Parser.CmdString := Format('units=%s', [LineUnitsStr(Value)]);
                    Edit;
                    YprimInvalid := TRUE;
                end
                else
                    DoSimpleMsg('Invalid line units integer sent via COM interface.  Please enter a value within range.', 183);

            end;
        end;
end;
//------------------------------------------------------------------------------
end.
